--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="bg-gray-100 text-gray-800">
   <header class="bg-white shadow mb-8">
     <div class="max-w-6xl mx-auto p-6 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">🧪 POC Tools</h1>
-      <a href="https://github.com/yourusername/POC-Tools" target="_blank"
+      <h1 class="text-2xl font-bold">Web Tools</h1>
+      <a href="https://github.com/amrshah/POC-Tools" target="_blank"
          class="text-blue-600 hover:underline">GitHub Repo</a>
     </div>
   </header>
