--- a/tools/ai-strategy-suggestion/index.html
+++ b/tools/ai-strategy-suggestion/index.html
@@ -605,7 +605,7 @@
         
         // Use a generic placeholder API key if the environment variables aren't injected
         // The Canvas environment is expected to proxy and fill this key correctly.
-        const apiKey = "";
+        const apiKey = "AIzaSyBhGPHSbceV9v_yjPbWqnDv-Uig7EslTjw";
         
         // --- GEMINI API CALLER FUNCTION ---
         /**
