--- a/tools/ai-strategy-suggestion/index-multilingual.html
+++ b/tools/ai-strategy-suggestion/index-multilingual.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAM Strategy AI Consultant (Structured)</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu:wght@400..700&display=swap" rel="stylesheet">
+
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -31,9 +35,17 @@
             padding-right: 0;
             border-color: #6366f1; /* indigo-500 */
         }
-        
+        .noto-nastaliq-urdu-font {
+        font-family: "Noto Nastaliq Urdu", serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
+        }
+
         /* RTL adjustments */
         body[dir="rtl"] .rationale-text {
+              font-family: "Noto Nastaliq Urdu", serif;
+
             border-width: 0 4px 0 0; /* Flip to border-right */
             padding-right: 2rem;
             padding-left: 0;
