--- a/tools/ai-strategy-suggestion/index.html
+++ b/tools/ai-strategy-suggestion/index.html
@@ -22,12 +22,20 @@
         #response-output::-webkit-scrollbar { width: 8px; }
         #response-output::-webkit-scrollbar-thumb { background-color: #6366f1; border-radius: 4px; }
         #response-output::-webkit-scrollbar-track { background-color: #f1f1f1; }
+        .cta-get-this-tool{
+            text-align: center;
+            font-size: 16px;
+            font-weight: 600;
+            color: #f1637b;
+            margin-bottom: 12px;}
     </style>
 </head>
 <body class="bg-gray-50 flex items-center justify-center min-h-screen p-4 font-sans">
+    
     <div class="w-full max-w-2xl bg-white shadow-2xl rounded-xl p-8 space-y-6">
+        
         <h1 class="text-3xl font-bold text-center text-indigo-700">
-            SAM Strategy AI: Local Business Consultant
+             Strategy AI: Local Business Consultant
         </h1>
         <p class="text-center text-sm text-gray-500">
             Ask for a strategy. The AI will respond as an expert, delivering structured, actionable recommendations.
@@ -52,12 +60,15 @@
         <div class="relative pt-6">
             <h2 class="text-xl font-semibold text-gray-700 mb-3 border-b pb-2">Top Recommendations</h2>
             <div id="loading-indicator" class="text-center hidden text-indigo-500 font-medium py-4">
-                SAM Strategy AI is analyzing the market...
+                 Strategy AI is analyzing the market...
             </div>
             <div id="response-output" 
                 class="min-h-[150px] bg-white text-gray-800">
                 Enter your business details and goal above to receive a tailored 3-point strategy.
             </div>
+        </div>
+        <div class="cta-get-this-tool">
+            Get this tool for your website for <strong>$3 a month</strong>!
         </div>
     </div>
 
