Landing page optimizer
Landing page optimizer tool

--- a/tools/ai-strategy-suggestion/index.html
+++ b/tools/ai-strategy-suggestion/index.html
@@ -38,7 +38,7 @@
              Strategy AI: Local Business Consultant
         </h1>
         <p class="text-center text-sm text-gray-500">
-            Ask for a strategy. The AI will respond as an expert, delivering structured, actionable recommendations.
+            Ask for a strategy. Our Business AI Expert will respond by delivering structured, actionable recommendations.
         </p>
         
         <div class="space-y-4">
