--- a/tools/ai-strategy-suggestion/index-multilingual.html
+++ b/tools/ai-strategy-suggestion/index-multilingual.html
@@ -102,7 +102,7 @@
 
     <script>
         //our deployed Cloudflare Worker endpoint!
-        const API_PROXY_URL = "https://gemini-api-keys.amr-shah.workers.dev"; 
+        const API_PROXY_URL = "https://my-ai-models.amr-shah.workers.dev"; 
         
         const businessInput = document.getElementById('business-input');
         const goalInput = document.getElementById('goal-input');
