--- a/tools/ai-strategy-suggestion/index-multilingual.html
+++ b/tools/ai-strategy-suggestion/index-multilingual.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu:wght@400..700&display=swap" rel="stylesheet">
+<!-- Font Awesome CDN -->
+<link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+
 
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -65,8 +68,8 @@
             </select>
         </div>
 
-        <h1 id="main-title" class="text-3xl font-bold text-center text-indigo-700">
-            SAM Strategy AI: Local Business Consultant
+        <h1 id="main-title" class="text-3xl font-bold text-center text-black-700">
+            <i class="fa-solid fa-algolia text-black-600"></i>SAM Strategy AI: Local Business Consultant
         </h1>
         <p id="description-text" class="text-center text-sm text-gray-500">
             Ask for a strategy. The AI will respond as an expert, delivering structured, actionable recommendations.
