--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>POC Tools Directory</title>
+  <!-- Font Awesome CDN -->
+<link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
   <header class="bg-white shadow mb-8">
     <div class="max-w-6xl mx-auto p-6 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Web Tools</h1>
+      <h1 class="text-2xl font-bold"><i class="fa-solid fa-globe text-black-600"></i> Web Tools</h1>
       <a href="https://github.com/amrshah/POC-Tools" target="_blank"
          class="text-blue-600 hover:underline">GitHub Repo</a>
     </div>
