--- a/tools/ai-landing-optimizer/index.html
+++ b/tools/ai-landing-optimizer/index.html
@@ -6,6 +6,9 @@
     <title>AI Landing Page Optimizer - POC Demo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <!-- Font Awesome CDN -->
+<link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+
     <style>
         @keyframes spin {
             to { transform: rotate(360deg); }
@@ -37,7 +40,7 @@
                     </svg>
                 </div>
                 <h1 class="text-4xl font-bold mb-3 bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
-                    AI Landing Page Optimizer
+                    <i class="fa-solid fa-dashboard text-white-600"></i> AI Landing Page Optimizer
                 </h1>
                 <p class="text-gray-400 text-lg">
                     Analyze any landing page and get AI-powered optimization suggestions
