--- a/tools/ai-strategy-suggestion/index.html
+++ b/tools/ai-strategy-suggestion/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Strategy Consultant</title>
+    <!-- Font Awesome CDN -->
+<link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -34,8 +37,8 @@
     
     <div class="w-full max-w-2xl bg-white shadow-2xl rounded-xl p-8 space-y-6">
         
-        <h1 class="text-3xl font-bold text-center text-indigo-700">
-             Strategy AI: Local Business Consultant
+        <h1 class="text-3xl font-bold text-center text-black-700">
+             <i class="fa-solid fa-algolia text-black-600"></i> Strategy AI: Local Business Consultant
         </h1>
         <p class="text-center text-sm text-gray-500">
             Ask for a strategy. Our Business AI Expert will respond by delivering structured, actionable recommendations.
