--- a/tools/ai-landing-optimizer/index.html
+++ b/tools/ai-landing-optimizer/index.html
@@ -34,7 +34,7 @@
     <div id="inputScreen" class="min-h-screen flex items-center justify-center p-6">
         <div class="max-w-2xl w-full">
             <div class="text-center mb-8">
-                <h1 class="text-4xl font-bold mb-3 bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
+                <h1 style="line-height: normal;" class="text-4xl font-bold mb-3 bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
                     <i class="fa-solid fa-dashboard text-white-600"></i> AI Landing Page Optimizer
                 </h1>
                 <p class="text-gray-400 text-lg">
