--- a/tools/ai-landing-optimizer/index.html
+++ b/tools/ai-landing-optimizer/index.html
@@ -329,16 +329,18 @@
 
         async function fetchPageContent(url) {
             try {
-                // Use CORS proxy to fetch the page
-                const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`;
-                const response = await fetch(proxyUrl);
+                const response = await fetch('https://gemini-api-keys.amr-shah.workers.dev/scrape', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ targetUrl: url })
+                });
                 
                 if (!response.ok) {
                     throw new Error('Failed to fetch page content');
                 }
                 
-                const html = await response.text();
-                return html;
+                const data = await response.json();
+                return data.html;
             } catch (error) {
                 throw new Error('Unable to fetch page. Please ensure the URL is accessible.');
             }
