--- a/tools/ai-landing-optimizer/index.html
+++ b/tools/ai-landing-optimizer/index.html
@@ -592,7 +592,8 @@ For each variation (original + 3 personas), provide:
                 }`;
                 btn.innerHTML = `
                     <div class="flex items-center gap-2">
-                        <span>👥</span>
+                        <i class="fa-solid fa-users text-white"></i>
+
                         <span>${persona.name}</span>
                         ${improvement ? `<span class="text-xs bg-green-500/20 text-green-400 px-2 py-0.5 rounded">${improvement}</span>` : ''}
                     </div>
