--- a/tools/ai-landing-optimizer/index.html
+++ b/tools/ai-landing-optimizer/index.html
@@ -276,7 +276,7 @@
     </div>
 
     <script>
-        const API_PROXY_URL = "https://my-scraper.amr-shah.workers.dev/scrape";
+        const API_PROXY_URL = "https://my-scraper.amr-shah.workers.dev";
         let analysisData = null;
         let currentPersona = 'original';
         let userUrl = '';
