--- a/tools/markdown-previewer/index.html
+++ b/tools/markdown-previewer/index.html
@@ -438,7 +438,7 @@ function hello() {
 
 ---
 
-Start typing to see the magic! ✨`;
+Start typing to see the magic! Enjoy writing in Markdown!`;
 
         editor.value = defaultContent;
 
